# 42sh

./: Makefile  README.md  meson.build
src/: 42sh.c  meson.build
src/ast/: ast.c  ast.h  ast_constructors.h  base_ast.h  leaf_ast.h  meson.build  node_ast.h
src/ast/leaves/: ast_eof.c  ast_newl.c  ast_simple_cmd.c  meson.build
src/ast/nodes/: ast_and_or.c  ast_cmd.c  ast_compound_list.c  ast_do_group.c  ast_else.c  ast_if.c  ast_input.c  ast_list.c  ast_pipe.c  ast_sh_cmd.c  ast_until.c  ast_while.c  meson.build
src/builtins/: cd.c  cd.h  dot.c  dot.h  echo.c  echo.h  exit.c  exit.h  export.c  export.h  meson.build
src/io/: cstream_file.c  cstream_string.c
src/lexer/: lex_keyword.c  lex_keyword.h  lexer.c  lexer.h  meson.build  token.c  token.h
src/parser/: meson.build  parser.c  parser.h
src/parser/rules/: meson.build  rule_and_or.c  rule_cmd.c  rule_compound_list.c  rule_do_group.c  rule_else.c  rule_if.c  rule_input.c  rule_list.c  rule_pipe.c  rule_sh_cmd.c  rule_simple_cmd.c  rule_until.c  rule_while.c  rules.h
src/tools/: defines.h  meson.build  option-parser.c  option-parser.h  process_args.c  process_args.h
src/utils/: alloc.c  alloc.h  meson.build  skip_space.c  skip_space.h  vec.c
tests/: ast_test.c  lexer_test.c  malloc_test.c  meson.build  parser_test.c  sh_test.sh
tests/builtins/: cd_tests.c  exit_tests.c  meson.build
tests/tests_suite/: EpiTests.py  argument_test.yml  false_argument.py  test.yaml  true_argument.py
tests/tests_suite/argument_test/: test1  test10  test11  test12  test13  test14  test15  test16  test17  test18  test19  test2  test20  test21  test23  test24  test25  test26  test27  test28  test3  test30  test31  test32  test33  test34  test35  test36  test37  test38  test4  test40  test41  test42  test43  test44  test45  test46  test47  test48  (+40 more)
tests/tests_suite/files_sh/: file_10.sh  file_100.sh  file_101.sh  file_102  file_102.sh  file_103  file_103.sh  file_105.sh  file_106.sh  file_107.sh  file_108.sh  file_109.sh  file_11.sh  file_111.sh  file_112.sh  file_113.sh  file_114.sh  file_115.sh  file_117.sh  file_119.sh  file_121.sh  file_122.sh  file_123.sh  file_124.sh  file_125.sh  file_126.sh  file_127.sh  file_128.sh  file_129.sh  file_130.sh  file_131.sh  file_133.sh  file_134.sh  file_135.sh  file_136  file_14.sh  file_15.sh  file_16.sh  file_17.sh  file_18.sh  (+81 more)
