subdir('utils')
subdir('io')
subdir('lexer')
subdir('parser')
subdir('ast')
subdir('tools')
subdir('builtins')

include_dir += ['src/utils']
include_dir += ['src/io']
include_dir += ['src/lexer']
include_dir += ['src/parser']
include_dir += ['src/ast']
include_dir += ['src/tools']
include_dir += ['src/builtins']

main_file += files('42sh.c')
