all_sources += files(
    'rules.c',
    'rule_cmd.c',
    'rule_compound_list.c',
    'rule_else.c',
    'rule_if.c',
    'rule_input.c',
    'rule_list.c',
    'rule_sh_cmd.c',
    'rule_simple_cmd.c',
    'rule_while.c',
    'rule_until.c',
    'rule_do_group.c',
    'rule_and_or.c',
    'rule_pipe.c'
)
